@@ -28,6 +28,7 @@ The following bugs are resolved with this release:
   [25976] nss_compat: internal_end*ent may clobber errno, hiding ERANGE
   [26248] Incorrect argument types for INLINE_SETXID_SYSCALL
   [26332] Incorrect cache line size load causes memory corruption in memset
+  [26383] bind_textdomain_codeset doesn't accept //TRANSLIT anymore
 
 Security related changes:
 
